--- a/css_practice/styles/styles.css
+++ b/css_practice/styles/styles.css
@@ -1,9 +1,11 @@
 body {
     text-align: center;
   }
-  nav {
+  nav, footer {
     background-color: steelblue;
     padding: 10px;
+    color: white;
+    text-align: center;
   }
   a {
     color: white;
@@ -13,21 +15,40 @@ body {
     color: steelblue;
   }
   img {
-    width: 800px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     border: 4px solid steelblue;
   }
   p {
     padding: 10px;
   }
-  footer {
-    background-color: steelblue;
-    color: white;
-  }
-  .main-para{
-    font-size: 1.5em;
-    line-height: 1.5em;
-  }
+
+main p {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
   #active{
     background-color: white;
     color: steelblue;
+  }
+  footer p {
+    font-size: 20px;
+    margin: 20px;
+  }
+
+  a:hover{
+    background-color: white;
+    color: steelblue;
+  }
+
+  body{
+    text-align: center;
+  }
+  h1{
+    text-align: center;
+  }
+  *{
+    border: 2px blue;
   }
