--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Mochiy+Pop+P+One&display=swap');
+
 #content{
     max-width: 1600px;
 }
@@ -6,14 +8,22 @@ div{
     max-width: 1600px;
     margin: 0 auto;
 }
-#logo, #icon {
+.logo, .icon {
 width: 80px;
+padding-top: 10px;
+}
+.home-title{
+    color: #5A391D;
+    font-size: 2em;
+    font-family: "Mochiy Pop P One"; 
+    margin-top: 10px;
 }
 #hero-img{
     width: 100%;
 }
 nav a{
 text-align: center;
+padding: 35px;
 }
 #hero-msg h1, #hero-msg h4{
 text-align: center;
@@ -29,7 +39,20 @@ text-align: center;
     background-color: #4B9AB6;
 }
 body{
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 background-color: white	;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+
+h2 {
+    font-family: "Mochiy Pop P One" ;
+    margin: 0;
 }
 header{
     background-color:#324376		;
@@ -43,15 +66,39 @@ nav a:hover{
 .book, .join{
     color: black;
 background-color: #5A391D ;
+font-size: 18px;
+padding: 15px 30px;
+margin-top: 50px;
+border-radius: 5px;
+}
+.card-img{
+   border: black;
+}
+main section img{
+    box-sizing: border-box;
 }
 .book:hover, .join:hover{
 background-color: white  ;
 }
+.msg p{
+    font-size: .8em ;
+    padding-bottom: 15px;
+}
 .msg{
+    font-family: "Mochiy Pop P One" ;
     color:white;
 background-color:#324376 ;
+line-height: 1.5em;
+padding: 35px;
 }
 footer, footer a{
 color: white;
 background-color:#324376;
+padding: 25px 50px;
+margin-top: 200px;
+
 }
+footer .social img {
+    padding-top: 15px;
+}
+
