--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -18,8 +18,29 @@ padding-top: 10px;
     font-family: "Mochiy Pop P One"; 
     margin-top: 10px;
 }
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    color: white;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-img{
-    width: 100%;
+    grid-column:1/4 ;
+    width:100%;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 nav a{
 text-align: center;
@@ -38,18 +59,31 @@ text-align: center;
 #background {
     height: 725px;
     background-color: #4B9AB6;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 body{
     font-size: 22px;
     margin: 0;
     padding: 0;
-background-color: white	;
+background-color: #586BA4	;
 }
 
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
 }
-
+.rivers-card{
+    grid-column: 2/4 ;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
 
 h2 {
     font-family: "Mochiy Pop P One" ;
@@ -57,6 +91,18 @@ h2 {
 }
 header{
     background-color:#324376		;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+#logo_link{
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a{
     color: white;
@@ -73,8 +119,17 @@ padding: 15px 30px;
 margin-top: 50px;
 border-radius: 5px;
 }
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
 .card-img{
     border: 15px solid black;
+    width: 100%;
+}
+.card-img, .mountains {
+    width: 100%;
 }
 main section img{
     box-sizing: border-box;
@@ -92,6 +147,8 @@ background-color: white  ;
 background-color:#324376 ;
 line-height: 1.5em;
 padding: 35px;
+grid-column: 6/10;
+grid-row: 6/7;
 }
 footer, footer a{
 color: white;
@@ -103,4 +160,59 @@ text-decoration: none;
 footer .social img {
     padding-top: 15px;
 }
+footer {
+    justify-content: space-around;
+    align-items: center;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
 
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+      
