--- a/personal-site/styles/site-plan.css
+++ b/personal-site/styles/site-plan.css
@@ -5,25 +5,26 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #F7F9F9   ;
-  --secondary-color: #BED8D4 ;
-  --accent1-color: #78D5D7;
-  --accent2-color: #63D2FF;
+  --primary-color: #255822   ;
+  --secondary-color: #2C4E4C ;
+  --accent1-color: #D6BB08;
+  --accent2-color: #542D2B
+  ;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: black; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #63D2FF; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #63D2FF  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #78D5D7;
+  --headline-color-on-white: #2C4E4C;  /* headlines on a white background */ 
+  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #255822; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #255822  ;
+  --nav-link-color: white;
+  --nav-background-color: #D6BB08;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #BED8D4;
+  --nav-hover-background-color: #542D2B;
 }
 
 
