--- a/personal-site/styles/site-plan.css
+++ b/personal-site/styles/site-plan.css
@@ -24,7 +24,7 @@ Fonts are separated by a | */
   --nav-link-color: white;
   --nav-background-color: #D6BB08;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #542D2B;
+  --nav-hover-background-color: brown;
 }
 
 
