--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,20 +2,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Mochiy+Pop+P+One&display=swap');
 
 #content{
-    max-width: 2000px;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 div{ 
     margin: 0 auto;
 }
-.logo, .icon {
-width: 80px;
-padding-top: 10px;
+
+/* header code */
+header{
+    background-color:#324376		;
+    display: grid;
+    text-align: center;
+    grid-template-columns: 150px auto;
+    z-index: 3;
 }
+.logo, .icon {
+    width: 80px;
+    padding-top: 10px;
+    }
 .home-title{
     color: #5A391D;
     font-size: 2em;
     font-family: "Mochiy Pop P One"; 
     margin-top: 10px;
+}
+#hero-img{
+    width:100%;
 }
 #hero{
     display: grid;
@@ -23,6 +36,7 @@ padding-top: 10px;
     margin-top: -100px;
 }
 #hero-box {
+    text-align: center;
     grid-column: 1/4;
     grid-row: 1/3;
     z-index: -1;
@@ -33,22 +47,15 @@ padding-top: 10px;
     grid-row: 1/2;
     margin-top: 100px;
 }
-#hero-img{
-    grid-column:1/4 ;
-    width:100%;
-}
+#hero-msg h1, #hero-msg h4{
+    text-align: center;
+    }
+/* body of the page */
 .home-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-nav a{
-text-align: center;
-padding: 35px;
-text-decoration: none;
-}
-#hero-msg h1, #hero-msg h4{
-text-align: center;
-}
+
 .button-box{
 text-align: center;
 }
@@ -88,17 +95,15 @@ h2 {
     font-family: "Mochiy Pop P One" ;
     margin: 0;
 }
-header{
-    background-color:#324376		;
-    display: grid;
-    grid-template-columns: 150px auto;
-}
+
 
 #logo_link{
     padding-top: 5px;
     justify-self: center;
     align-self: center;
 }
+
+/* Nav. */
 nav {
     display: flex;
     justify-content: space-around;
@@ -106,10 +111,14 @@ nav {
 nav a{
     color: white;
     text-decoration: none;
+    padding: 35px;
+    text-align: center;
+    margin:0 auto;
 }
 nav a:hover{
     background-color:#F5DD90		;
 }
+
 .book, .join{
     color: black;
 background-color: #5A391D ;
@@ -149,6 +158,7 @@ padding: 35px;
 grid-column: 6/10;
 grid-row: 6/7;
 }
+/* footer code */
 footer, footer a{
 color: white;
 background-color:#324376;
@@ -173,6 +183,7 @@ footer {
     transform: scale(1.1);
 }
 
+/* media query */
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
