--- a/personal-site/styles/Reference.css
+++ b/personal-site/styles/Reference.css
@@ -65,14 +65,15 @@ body{
 }
 .home-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 10px;
 }
 .whatwedo{
     background-color: #2C4E4C;
     color: white;
     border: 2px solid #D6BB08;
-    grid-column: 6/10;
-    grid-row: 1/2;
+    grid-column: 1/4;
+    grid-row: 3/5;
     font-size: larger;
     text-align: center;
 }
@@ -80,12 +81,14 @@ body{
     background-color: white;
     grid-column: 1/5;
     grid-row: 1/3;
-    height: 80%;
+    height: 90%;
+    width: 90%;
     
 }
 .mulch{
     grid-column: 6/9;
-    grid-row: 4/4;
+    grid-row: 3/5;
+
 }
 
 .q_a{
@@ -93,11 +96,12 @@ body{
     color: white;
     grid-column: 3/9;
     padding-top: 20px;
+    padding-bottom: 100px;
     grid-row: 2/5;
-    border: black solid 1px;
+    border: #D6BB08 solid 1px;
     text-align: center;
-    grid-column: 1/5;
-    grid-row: 4/4;
+    grid-column: 5/9;
+    grid-row: 1/2;
 }
 .est, .book{
     color: white;
@@ -108,8 +112,7 @@ body{
     margin-bottom: 50px;
     border-radius: 100px;
     text-decoration: none;
-    grid-row: 2/3;
-    grid-column: 1/4;
+
 }
 .book:hover{
     background-color: #F5DD90;
